[fix] Lower glare z-index

--- a/src/pages/home/ui/home/home.module.scss
+++ b/src/pages/home/ui/home/home.module.scss
@@ -16,6 +16,7 @@
   &::after {
     content: '';
     position: absolute;
+    z-index: -1;
     background-color: rgba(6, 210, 231, 1);
     width: 100px;
     height: 100px;
